Added basic HTML and required sections to index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Antony Cao</title>
+</head>
+    
+<body>
+    <div class="container">
+        <h1>About Me</h1>
+        <p></p>
+    </div>
 
+    <div>
+        <h1>Skills/Experience</h1>
+        <p></p>
+    </div>
+
+    <div>
+        <h1>Contact Me At</h1> 
+       <p></p>
+    </div>
+</body>
+</html>
