Finished the required sections for the resume
filled in the paragraph slots, separated skills and experience. finished contact information, linked page to a style sheet

--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
 <body>
     <div class="container">
         <h1>About Me</h1>
-        <p></p>
+        <p>I am currently a student at Long Island University as a sophomore in the Computer Science major. I am known for being innovative and creative and 
+            I have a love for learning new skills, completing tasks, and work well under pressure.</p>
     </div>
 
     <div>
-        <h1>Skills/Experience</h1>
-        <p></p>
+        <h1>Experience</h1>
+        <p>I have no current work experience, however I am willing to learn skills required for my tasks. 
+            I do have experience in working with clients and people as I've done charity work at schools and helped with events such as assisting with the Asian Heritage Parade and a gingerbread house workshop.</p>
     </div>
 
+     <div>
+        <h1>Skills</h1>
+        <ul>
+            <li>C++</li>
+            <li>Arduino</li>
+            <li>Breadboarding</li>
+            <li>HTML</li>
+            <li>Singing</li>
+        </ul>
+    </div>
+    
     <div>
         <h1>Contact Me At</h1> 
-       <p></p>
+       <p><a> href="mailto:antonanalt@gmail.com"> Antonanalt@gmail.com</a> | <a> href="https://github.com/So-mething">Github</a></p>
     </div>
 </body>
 </html>
