Linked index to a style sheet (style.css)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Antony Cao</title>
+     <link rel="stylesheet" type="text/css" hre="style.css"/>
 </head>
     
 <body>
