Fixed all sections to a container, added Header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     
 <body>
     <div class="container">
-        <h1>About Me</h1>
+        
+            <h1> Antony Cao</h1> 
+
+        <div>
+        <h1>About Me</h1>  
         <p>I am currently a student at Long Island University as a sophomore in the Computer Science major. I am known for being innovative and creative and 
             I have a love for learning new skills, completing tasks, and work well under pressure.</p>
     </div>
@@ -33,6 +37,7 @@
     <div>
         <h1>Contact Me At</h1> 
        <p><a> href="mailto:antonanalt@gmail.com"> Antonanalt@gmail.com</a> | <a> href="https://github.com/So-mething">Github</a></p>
+    </div>
     </div>
 </body>
 </html>
