Fixed error on Contact Me section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     
     <div>
         <h1>Contact Me At</h1> 
-       <p><a> href="mailto:antonanalt@gmail.com"> Antonanalt@gmail.com</a> | <a> href="https://github.com/So-mething">Github</a></p>
+       <a> href="mailto:antonanalt@gmail.com"> Antonanalt@gmail.com</a> 
+        <p> | </p>
+    <a> href="https://github.com/So-mething">Github</a>
     </div>
     </div>
 </body>
